--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -36,3 +36,12 @@ a {
   border-radius: 50%;
   opacity: 0.7;
 }
+
+.card-header {
+background-color: #F3F6F7;
+}
+
+#delete-button {
+  background-color: #E1F1F4;
+  color: black;
+}
