Minor styling tweaks

--- a/views/account/index.hbs
+++ b/views/account/index.hbs
@@ -27,7 +27,7 @@
             </div>
             <br>
             <div>
-                <button type="submit">Submit</button>
+                <button type="submit" class="btn btn-outline-dark">Submit</button>
             </div>
         </form>
     </div>
