--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,12 +18,12 @@
           <a class="nav-link active text-dark" href='/posts'> Timeline </a>
       </li>
       {{/unless}}
-      {{#unless isProfile }}
+      {{!-- {{#unless isProfile}}
       <li class="nav-item text-dark">
-          <a class="nav-link active text-dark" href='/users/profile/{{this._id}}'> Profile</a>
+          <a class="nav-link active text-dark" href='/profile/{{session.userId}}'> Profile</a>
       </li>
-      {{/unless}}
-      {{#unless account }}
+      {{/unless}} --}}
+      {{#unless account}}
       <li class="nav-item text-dark">
           <a class="nav-link active text-dark" href='/account'> Account Page</a>
       </li>
