pictures now showing up on the comments page

--- a/views/comments/index.hbs
+++ b/views/comments/index.hbs
@@ -22,7 +22,7 @@
   </div>
   <div class="card-body">
     <p class="card-title"> MESSAGE: {{post.message}} </p>
-    {{!-- <p class="card-text">Comment</p> --}}
+    <img id="postpic" src="/uploads/{{post.image}}">
   </div>
 </div>
 
