--- a/views/home/myprofile.hbs
+++ b/views/home/myprofile.hbs
@@ -1,8 +1,11 @@
-<div>
+<div class="user">
+  <div class="userChild">
   <h2>Name: {{user.firstName}}</h2>
   <h3>Email: {{user.email}}</h3>
   <img src="data:image/png;base64,{{profileImage}}"  height="150" width="150" alt="Avatar">
+  </div>
 </div>
+
 
 <div id="friends">
   <h2>FRIENDS</h2>
