--- a/views/posts/post.hbs
+++ b/views/posts/post.hbs
@@ -4,7 +4,7 @@
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
 {{!-- Original post --}}
-<div class="container">
+<div class="container post">
   <div class="col-md-2 col-sm-2 hidden-xs">
   <figure class="thumbnail">
     <img height="100" width="100" class="img-responsive" src="data:image/png;base64,{{postUserImage}}" />
@@ -15,6 +15,7 @@
   <h4>
     {{post.message}}
   </h4>
+ <img height="300" class="img-responsive" src="data:image/png;base64,{{post.image}}" /> 
 </div>
 </div>
 
