--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,7 +1,9 @@
 <h1>Timeline</h1>
 <ul class="posts">
   {{#each posts}}
-  <li>{{this.message}}</li>
+    <li>{{this.message}}</li>
+    <li>{{this.likes}} likes</li>
+    <li>{{this.example}}</li>
   {{/each}}
 </ul>
 
