--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,6 +1,6 @@
 <form id="new-user-form" action="/users" method="post">
-  <label for="username">Username: </label>
-  <input id="username" type="username" name="username" value="">
+  <label for="name">Name: </label>
+  <input id="name" type="name" name="name" value="">
   <label for="email">Email: </label>
   <input id="email" type="email" name="email" value="">
   <label for="password">Password: </label>
