--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,8 +1,9 @@
 <h1>Timeline</h1>
 <ul class="posts">
-  {{#each posts}}
-    <li>{{this.message}}</li>
 
+  {{#each posts}}
+  <li>{{this.message}} at {{this.createdAt}}
+  </li>
   {{/each}}
 </ul>
 
