Added added navbar functions. Changed redirect to homepage
Co-authored-by: itsmosho itsmosho@gmail.com

--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -2,12 +2,38 @@
 <html>
   <head>
     <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/signup.css' />
   </head>
   <body>
-    <form action='/sessions/new' method='GET'>
-      <input id="signin" type="submit" value="Sign In">
-    </form>
+    <!-- Navbar section -->
+    <nav class="navbar">
+        <div class="navbar__container">
+            <a href="/" id="navbar__logo">Acebook</a>
+            <div class="navbar__toggle" id="mobile-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+            <ul class="navbar__menu">
+                <li class="navbar__item">
+                    <a href="#home" class="navbar__links" id="home-page">Home</a>
+                </li>
+                <li class="navbar__item">
+                    <a href="#about" class="navbar__links" id="about-page">About</a>
+                </li>
+                <li class="navbar__item">
+                    <a href="#services" class="navbar__links" id="services-page">Services</a>
+                </li>
+                <li class="navbar__btn">
+                  <form action='/sessions/new' method='GET'>
+                    <input id="signin" class="button" type="submit" value="Sign In">
+                  </form>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    
     {{{body}}}
   </body>
 </html>
