--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,13 +1,38 @@
 <html>
   <head>
     <title>{{title}}</title>
-    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link rel="stylesheet" href="/stylesheets/layout.css" />
   </head>
   <body>
 
-    <form action="/sessions?_method=DELETE" method="POST">
-      <input type="submit" value="Log Out" />
-    </form>
+
+    <!-- Navbar section -->
+    <nav class="navbar">
+        <div class="navbar__container">
+            <a href="/posts" id="navbar__logo">Acebook</a>
+            <div class="navbar__toggle" id="mobile-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+            <ul class="navbar__menu">
+                <li class="navbar__item">
+                    <a href="#home" class="navbar__links" id="home-page">Home</a>
+                </li>
+                <li class="navbar__item">
+                    <a href="#about" class="navbar__links" id="about-page">About</a>
+                </li>
+                <li class="navbar__item">
+                    <a href="#services" class="navbar__links" id="services-page">Services</a>
+                </li>
+                <li class="navbar__btn">
+                  <form action="/sessions?_method=DELETE" method="POST">
+                    <input type="submit" class="button" value="Log Out" />
+                  </form>
+                </li>
+            </ul>
+        </div>
+    </nav>
     {{{body}}}
   </body>
 </html>
