name does appear on the app but the tests still fail

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -5,6 +5,9 @@
     <li>{{this.message}}
       at
       {{this.createdAt}}
+      by
+      {{this.user.firstName}}
+      {{this.user.lastName}}
     </li>
   {{/each}}
 </ul>
