--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -1,5 +1,6 @@
 <form id="new-post-form" action="/posts" method="post">
   <label for="message">Message: </label>
-  <input id="message" type="text" name="message" value="">
-  <input type="submit" value="Submit">
+  <input id="message" type="text" name="message" value="" />
+  <input id="user" type="hidden" name="user" value={{user._id}} />
+  <input type="submit" value="Submit" />
 </form>
