--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -5,7 +5,7 @@
     <li>{{this.message}}
       at
       {{this.createdAt}}
-      {{this.likes}} likes
+      {{this.likes.length}} likes
     </li>
   {{/each}}
 </ul>
