--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -7,6 +7,8 @@
       {{this.createdAt}}
       {{this.likes.length}} likes
     </li>
+    <label for="like"></label>
+    <input id="like" type="submit" value="Like this post">
   {{/each}}
 </ul>
 
