--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,7 +9,7 @@
       {{! redirects to log-in if not logged in}}
       {{! https://handlebarsjs.com/guide/builtin-helpers.html }}
       {{#if session.user}}
-        <a href="/posts/new"> Make a post </a>
+        <a id="make-post" href="/posts/new"> Make a post </a>
         <form action="/sessions?_method=DELETE" method="POST">
           <input type="submit" value="Log Out" />
         </form>
