--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,8 +1,8 @@
 <h1>Timeline</h1>
 <ul class="posts">
   {{#each posts}}
-    <li>{{this.message}}</li>
+    <li>{{this.author.name}}</li>
     <li>{{this.createdAt}}</li>
-    {{! user's name }}
+    <li>{{this.message}}</li>
   {{/each}}
 </ul>
