--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,15 +1,15 @@
 <h1>Timeline</h1>
 <ul class="posts">
   {{#each posts}}
-  <div>
-    <li >{{this.message}} - {{this.createdAt}}</li>
+  <div class="post">
+    <p>{{this.message}} - {{this.createdAt}}</p>
     <!-- create a comment on the post -->
     <form id="new-comment-form" action="/posts/{{this._id}}" method="post">
       <input id="message" type="text" name="message" value="" placeholder="Comment here">
       <input type="submit" value="Submit">
     </form>
     {{#each this.comments}}
-      <li>{{this.name}} - {{this.message}} - {{this.createdAt}}</li>
+      <li class="comment">{{this.name}} - {{this.message}} - {{this.createdAt}}</li>
     {{/each}}
   </div>
   {{/each}}
