--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -3,10 +3,18 @@
   {{#each posts}}
 
   <li > <div><!-- Username and profile picture -->{{this.createdAt}}</div>
-        <div>{{this.message}} <img src="https://fsymbols.com/images/heart.png" id="like-button"/> {{this.likes.length}}</div> 
+        <div>{{this.message}} 
+          <!-- <img src="https://fsymbols.com/images/heart.png" id="like-button"/> -->
+          <form method="POST" action="/posts/like">
+          <input type="text" value="{{this._id}}" name="postId">
+          <input type="text" value="{{session.user}}" name="userId">
+          <input type="submit" value="Like" id="like-button">
+          </form> {{this.likes.length}}</div> 
   </li>
   
   {{/each}}
+
+  {{session.user.name}}
 </ul>
 
 <a class="new-post-link" href="/posts/new">New post</a>
