--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,3 +1,6 @@
+{{#if display}}
+  <h1>{{display}}</h1>
+{{/if}}
 <h1 class="title">{{title}}</h1>
 <form id="new-user-form" action="/users" method="post">
   <label for="email">Email: </label>
