--- a/views/upload/index.hbs
+++ b/views/upload/index.hbs
@@ -3,14 +3,7 @@
 <ul class="image">
   {{#each images}}
     <li>
-      {{image.data.data}}
-      {{!-- <img
-        src="data:{{image.contentType}};base64,
-                     {{toStringFromBase64 image.data.data}}"
-      /> --}}
-      {{!-- <p>{{this.image}}</p> --}}
-      {{! TODO line below needs updating to proper display method }}
-      {{!-- <img src="{{this.name}}" /> --}}
+      <img src="{{this}}" />
     </li>
   {{/each}}
 </ul>
