--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -3,8 +3,8 @@
   {{#each posts}}
   <div class="post">
     <p> 
-      <img class="profile_picture" src="{{../session.user.photo_link}}" alt="profile_picture">
-      {{this.message}} - {{this.createdAt}}
+      <img class="profile_picture" src="{{this.photo_link}}" alt="profile_picture">
+      {{this.name}}- {{this.message}} - {{this.createdAt}}
      </p>
     <!-- create a comment on the post -->
     <form id="new-comment-form" action="/posts/{{this._id}}" method="post">
