--- a/views/settings/index.hbs
+++ b/views/settings/index.hbs
@@ -1,4 +1,3 @@
-{{!placeholder}}
 <h1>Images page</h1>
 <ul class="image">
   {{#each images}}
@@ -9,7 +8,7 @@
 </ul>
 
 <h3>Upload new image</h3>
-<form action="/upload" enctype="multipart/form-data" method="post">
+<form action="/settings" enctype="multipart/form-data" method="post">
   <div class="form-group">
     <input type="file" class="form-control-file" name="uploadedImage" />
     <input
