--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -8,7 +8,8 @@
       <form method="POST" action="/posts/like">
         <input type="hidden" value="{{this._id}}" name="postId">
         <input type="hidden" value="{{../session.user._id}}" name="userId">
-        <input type="submit" value="Like" id="like-button">{{this.likes.length}}
+        <input type="submit" value="" id="like-button">
+        <span id="like-number">{{this.likes.length}}</span>
       </form>
     </div> 
     <!-- create a comment on the post -->
