--- a/public/stylesheets/signin.css
+++ b/public/stylesheets/signin.css
@@ -5,6 +5,11 @@
   font-family: 'kumbh Sans', sans-serif;
   scroll-behavior: smooth;
   }
+
+  body {
+    margin: 0;
+    padding: 0;
+  }
   
   .navbar {
       background: #131313;
