--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -6,6 +6,11 @@
   scroll-behavior: smooth;
   }
   
+  body {
+    margin: 0;
+    padding: 0;
+  }
+
   .navbar {
       background: #131313;
       height: 80px;
@@ -90,6 +95,14 @@
       color: #fff;
       transition: 0.3s ease;
   } 
+
+  .button:hover {
+    background: -webkit-linear-gradient(to left, #fcb045, #fcb045, #fcb045);
+    background: linear-gradient(to left, #fcb045, #fcb045, #fcb045);
+    /* background: #fcb045; */
+    color: #9518fc;
+    transition: 1s ease;
+  }
   
   .navbar__links:hover {
       color: #9518fc;
