--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,6 +2,7 @@
   <head>
     <title>{{title}}</title>
     <link rel="stylesheet" href="/stylesheets/layout.css" />
+    <link rel="stylesheet" href="/stylesheets/postcards.css">
   </head>
   <body>
 
