test all working, styles navbar changes

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,13 +18,13 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="#home" class="navbar__links" id="home-page">Home</a>
+                    <a href="/" class="navbar__links" id="home-page">Home</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="#about" class="navbar__links" id="about-page">About</a>
+                    <a href="/profile/:id" class="navbar__links" id="my-profile">My Profile</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="#services" class="navbar__links" id="services-page">Services</a>
+                    <a href="/settings/:id" class="navbar__links" id="settings">Settings</a>
                 </li>
                 <li class="navbar__btn">
                   <form action="/sessions?_method=DELETE" method="POST">
