--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -1,4 +1,4 @@
-<form id="new-post-form" action="/posts" method="post">
+<form id="new-post-form" action="/posts" method="POST">
   <label for="message">Message: </label>
   <input id="message" type="text" name="message" value="" />
   <input id="user" type="hidden" name="user" value={{user._id}} />
