--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -16,14 +16,11 @@
                 <span class="bar"></span>
             </div>
             <ul class="navbar__menu">
-                <li class="navbar__item">
-                    <a href="#home" class="navbar__links" id="home-page">Home</a>
-                </li>
-                <li class="navbar__item">
-                    <a href="#about" class="navbar__links" id="about-page">About</a>
-                </li>
-                <li class="navbar__item">
-                    <a href="#services" class="navbar__links" id="services-page">Services</a>
+                
+                <li class="navbar__btn">
+                  <form action='/users/new' method='GET'>
+                    <input id="signin" class="button" type="submit" value="Sign Up">
+                  </form>
                 </li>
             </ul>
         </div>
