feat(posts) - each post to be in individual divs (class post). Last integration test failing. Fixing on next commit
Co-authored-by: G-Redos  <g.redos@live.com>

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,9 +1,10 @@
 <h1>Timeline</h1>
 <ul class="posts">
   {{#each posts}}
-    
-    <li>{{this.author.name}}</li>
-    <li>{{this.createdAt}}</li>
-    <li>{{this.message}}</li>
+    <div class="post">
+      <li>{{this.author.name}}</li>
+      <li>{{this.createdAt}}</li>
+      <li>{{this.message}}</li>
+    </div>
   {{/each}}
 </ul>
