--- a/views/settings/index.hbs
+++ b/views/settings/index.hbs
@@ -1,14 +1,14 @@
 <h1>Settings</h1>
-<ul class="user">
-  <img src="{{user.image}}" />
-  <li>{{user.name}}</li>
-  <li>{{user.email}}</li>
+<ul id="user" class="user">
+  <img id="profile-image" src="{{user.image}}" />
+  <li id="user-name">{{user.name}}</li>
+  <li id="user-email">{{user.email}}</li>
 </ul>
 
 <h3>Upload new image</h3>
 <form action="/settings" enctype="multipart/form-data" method="post">
   <div class="form-group">
-    <input type="file" class="form-control-file" name="uploadedImage" /> 
+    <input type="file" class="form-control-file" name="uploadedImage" />
     <input type="submit" value="Upload" class="btn btn-default" />
   </div>
 </form>
