--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -9,6 +9,7 @@
   body {
     margin: 0;
     padding: 0;
+    background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
   }
 
   .navbar {
@@ -53,6 +54,7 @@
       display: flex;
       align-items: center;
       list-style: none;
+      cursor: pointer;
   }
   
   .navbar__item {
@@ -97,10 +99,11 @@
       padding-top: 10px;
   } 
 
-  /* input.button:hover {
+  input.button:hover {
     background: -webkit-linear-gradient(to right, #fcb045);
     background: linear-gradient(to right, #fcb045);
-  } */
+    cursor: pointer;
+  }
 
   .button:hover {
     background: -webkit-linear-gradient(to left, #fcb045, #fcb045, #fcb045);
