--- a/public/stylesheets/signin.css
+++ b/public/stylesheets/signin.css
@@ -9,6 +9,7 @@
   body {
     margin: 0;
     padding: 0;
+    background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
   }
   
   .navbar {
@@ -96,6 +97,20 @@
       transition: 0.3s ease;
   } 
   
+  input.button:hover {
+    background: -webkit-linear-gradient(to right, #fcb045);
+    background: linear-gradient(to right, #fcb045);
+    cursor: pointer;
+  }
+
+  .button:hover {
+    background: -webkit-linear-gradient(to left, #fcb045, #fcb045, #fcb045);
+    background: linear-gradient(to left, #fcb045, #fcb045, #fcb045);
+    /* background: #fcb045; */
+    color: #9518fc;
+    transition: 1s ease;
+  }
+
   .navbar__links:hover {
       color: #9518fc;
       transition: all 0.3s ease;
