--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -9,6 +9,7 @@
   body {
     margin: 0;
     padding: 0;
+    background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
   }
 
   .navbar {
@@ -95,6 +96,12 @@
       color: #fff;
       transition: 0.3s ease;
   } 
+
+  input.button:hover {
+    background: -webkit-linear-gradient(to right, #fcb045);
+    background: linear-gradient(to right, #fcb045);
+    cursor: pointer;
+  }
 
   .button:hover {
     background: -webkit-linear-gradient(to left, #fcb045, #fcb045, #fcb045);
