--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,45 +2,61 @@
 <html lang="en">
   <head>
     <title>{{title}}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel='stylesheet' href='/stylesheets/style.css'>
   </head>
   <body>
     <header>
       <!-- sessions.user is true if loggedIn-->
-      {{#if this.session.user}}
-          <div class="navbar">
-
-            <form class="navbar_forms" action='/posts' method='GET'>
-              <input id="timeline" type="submit" value="Timeline">
-            </form>
-
-            <form class="navbar_forms" action='users/{{session.user.id}}' method='GET'>
-              <input id="viewProfile" type="submit" value="View Profile">
-            </form>
-
-            <form class="navbar_forms" action='/users/{{session.user.id}}edit' method='GET'>
-              <input id="editProfile" type="submit" value="Edit Profile">
-            </form>
-            <form class="navbar_forms" action='/sessions?_method=DELETE' method='POST'>
-              <input id="logout" type="submit" value="Log Out">
-            </form>
-          </div>
-
-      {{else}}
-        <div class="navbar">
-          <a href="/users/new">Sign Up</a>
-          <a href="/sessions/new">Log In</a>
-        </div>
-
-      {{/if}}
+      
+          <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="/posts">Monsters Inc</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  {{#if this.session.user}}
+                  <li class="nav-item">
+                    <a aria-current="page" href="/posts">Posts</a>
+                  </li>
+                  <li class="nav-item">
+                    <a  href="users/{{session.user.id}}">View Profile</a>
+                  </li>
+                  <li class="nav-item">
+                    <a  href="/users/{{session.user.id}}/edit">Edit Profile</a>
+                  </li>
+                  <li class="nav-item">
+                    <a  href="/sessions/delete">Logout</a>
+                  </li>
+                  {{else}}
+                  <li class="nav-item">
+                    <a  href="/users/new">Sign Up</a>
+                  </li>
+                  <li class="nav-item">
+                    <a  href="/sessions/new">Log In</a>
+                  </li>
+                  {{/if}}
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
     <main>
       {{{body}}}
     </main>
-    <footer>
-      <div class="footer-items">  &copy; 2022 Monsters, Inc</div>
-      <div class="footer-items"> A project by <a href="https://makers.tech/" target="_blank">Makers Academy</a> Students</div>
-      <div class="footer-items"> <a href="#" target="_blank">About Us</a></div>
+    <footer class="fixed-bottom">
+      <div class="container text-center">
+        <div class="row">
+          <div class="col footer-items">  &copy; 2022 Monsters, Inc</div>
+          <div class="col footer-items"> A project by <a href="https://makers.tech/" target="_blank">Makers Academy</a> Students</div>
+          <div class="col footer-items"> <a href="#" target="_blank">About Us</a></div>
+        </div>
+      </div>
+     
     </footer>
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
 </html>
