--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -5,6 +5,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>{{title}}</title>
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
       <link rel='stylesheet' href='/stylesheets/style.css'>
     </head>
     <body>
@@ -23,10 +24,14 @@
         </form>
         <div>Do you already have an account? <a href="/sessions/new">Click here to login</a></div>
       </main>
-      <footer>
-        <div class="footer-items"> &copy;2022 Monsters, Inc</div>
-        <div class="footer-items"> A project by <a href="https://makers.tech/" target="_blank">Makers Academy</a> Students</div>
-        <div class="footer-items"> <a href="#" target="_blank">About Us</a></div>
+      <footer class="fixed-bottom">
+        <div class="container text-center">
+          <div class="row">
+            <div class="col footer-items">  &copy; 2022 Monsters, Inc</div>
+            <div class="col footer-items"> A project by <a href="https://makers.tech/" target="_blank">Makers Academy</a> Students</div>
+            <div class="col footer-items"> <a href="#" target="_blank">About Us</a></div>
+          </div>
+        </div>
       </footer>
     </body>
   </html>
